Added TODO list to Q4

--- a/quiz.html
+++ b/quiz.html
@@ -81,20 +81,29 @@ wrapper.classList.add("active"); */
 
 // 2. Add a class of active to every list item
 
-/*const listItem = document.querySelectorAll(".list-item");
+/*
+  // Navigation into selector
+const listItem = document.querySelectorAll(".list-item");
+  // testing selector 
 console.log(listItem);
-listItem.forEach(item => item.classList.add('active')); */
+  // action function
+listItem.forEach(item => item.classList.add('active'));
+*/
 
+/*
 // 3. Edit task 2 to only add the class of active to the first list on the page
   // navigation storage
 const firstLi = document.querySelectorAll("div.wrapper-class > ul.list > li");
   // testing route
 console.log(firstLi);
-  // action
+  // action function
 firstLi.forEach(item => item.classList.add('active'));
+*/
 
 // 4. Edit task 3 to only highlight the final list item, inside the list that you found in step 3
-
+// TODO: Create and store shortcut to 1st list
+// TODO: Test route
+// TODO: Find out how to target the last in a list
 // 5. Remove the div that shouldn't be there
 
 // 6. Add a fourth list item to final list of the page, with the text "List Item Three"
